--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -47,7 +47,8 @@ popular_questions=[{% for question in popular_questions %}{% if not question.cre
 <section class="card bg-main" id="novas_questoes">
 	<ul class="list-group list-group-flush" id="lista_de_questoes_recentes">
 	</ul>
-	<button class="btn btn-outline-primary" onclick="load_more()">Carregar mais</button>
+	<button class="btn btn-outline-primary" onclick="load_more(this, this.nextElementSibling);">Carregar mais</button>
+	<center style="display: none"><i class="fas fa-spinner fa-3x fa-spin"></i></center>
 </section>
 <!-- !Questões recentes -->
 <!-- Questões populares -->
@@ -58,7 +59,6 @@ popular_questions=[{% for question in popular_questions %}{% if not question.cre
 </section>
 <!-- !Questões populares -->
 </main>
-
 <div class="modal fade" id="question-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
@@ -83,9 +83,8 @@ popular_questions=[{% for question in popular_questions %}{% if not question.cre
     </div>
   </div>
 </div>
-
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/static/js/index.min.js?v=2.4"></script>
+<script src="/static/js/index.min.js?v=2.5"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 	</body>
