--- a/main_app/templates/base/response-content.html
+++ b/main_app/templates/base/response-content.html
@@ -92,6 +92,7 @@
 						<input type="hidden" name="response_id" value="{{ response.id }}">
 						<input type="hidden" name="question_id" value="{{ question.id }}">
 						<input type="text" maxlength="300" autocomplete="off" class="form-control comment-form bg-innermost-when-dark" name="text" placeholder="Escreva seu comentário" required>
+						</textarea>
 						<input class="btn btn-primary" type="submit" value="Comentar">
 					</form>
 				</div>
