--- a/main_app/templates/bot.html
+++ b/main_app/templates/bot.html
@@ -5,21 +5,30 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Faça-me perguntas!</title>
 
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+
 <style>
 	#mensagens {
 		height: 250px;
 		overflow: auto;
 	}
+	
+	#msgs {
+		width: 80%;
+		margin: 0 auto;
+	}
 </style>
 	</head>
 	<body>
-		<div id="mensagens">
+		<div id="msgs">
+			<div id="mensagens">
+			</div>
+			<form method="post" id="formulario-mensagem">
+				{% csrf_token %}
+				<input type="text" name="text" id="msg-usuario">
+				<button>Enviar</button>
+			</form>
 		</div>
-		<form method="post" id="formulario-mensagem">
-			{% csrf_token %}
-			<input type="text" name="text" id="msg-usuario">
-			<button>Enviar</button>
-		</form>
 		
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
