--- a/main_app/templates/bot.html
+++ b/main_app/templates/bot.html
@@ -16,23 +16,34 @@
 	#msgs {
 		width: 80%;
 		margin: 0 auto;
-		line-height: 35px;
+		line-height: 30px;
+	}
+	
+	#msg-usuario {
+		width: 85%;
 	}
 </style>
 	</head>
 	<body>
+		<center>
+			<hr>
+			<a href="/"><img src="/static/images/asker.png" width="50%"></a>
+			<hr>
+		</center>
+		
 		<div id="msgs" class="bg-light">
 			<div id="mensagens">
 			</div>
 			<hr>
-			<form method="post" id="formulario-mensagem">
+			<form method="post" id="formulario-mensagem" class="form-inline">
 				{% csrf_token %}
-				<input type="text" name="text" id="msg-usuario">
-				<button>Enviar</button>
+				<input type="text" name="text" id="msg-usuario" class="form-control">
+				<button class="btn btn-outline-primary"><i class="far fa-paper-plane"></i></button>
 			</form>
 		</div>
 		
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 <script>
 	document.getElementById("formulario-mensagem").onsubmit = function() {
 		
