--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -6,11 +6,16 @@
     
     <title>Programa de recompensas do Asker - Ganhe dinheiro!</title>
     
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
     
     <style>
+      header {
+        margin: 15px;
+      }
+      
       main {
-        max-width: 98%;
+        max-width: 95%;
         margin: auto;
       }
       
@@ -25,6 +30,11 @@
     </style>
   </head>
   <body>
+    <header>
+      <center>
+        <a href="/"><img src="/static/images/asker.png"></a>
+      </center>
+    </header>
     <main>
       <span>Seu saldo: 0,3</span>
       <i class="fas fa-coins fa-sm"></i>
@@ -38,8 +48,6 @@
   <div id="container-a5a82325576f4300f3eeba835c04e59a"></div>
         </div>
       </center>
-      <span>Clique no anúncio acima e receba 0,1 moedas de recompensa.</span>
-      
       
       <hr>
       
