--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -29,7 +29,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="bg-light">
     <header>
       <center>
         <a href="/"><img src="/static/images/asker.png"></a>
