--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -19,13 +19,17 @@
         margin: auto;
       }
       
-      .explicacao .title {
-        color: black;
-        border-bottom: 1px solid grey;
-      }
-      
       #ad1 {
         max-width: 70%;
+      }
+      
+      p {
+        text-indent: 5px;
+      }
+      
+      .title {
+        font-size: 1.1em;
+        color: black;
       }
     </style>
   </head>
@@ -35,30 +39,44 @@
         <a href="/"><img src="/static/images/asker.png"></a>
       </center>
     </header>
-    <main>
-      <span>Seu saldo: 0,3</span>
-      <i class="fas fa-coins fa-sm"></i>
-      <hr>
-      
-      <div>Clique no anúncio abaixo e receba 0,1 moedas de recompensa.</div>
-      <hr>
-      <center>
-        <div id="ad1">
-          <script async="async" data-cfasync="false" src="//pl16405437.highperformancecpm.com/a5a82325576f4300f3eeba835c04e59a/invoke.js"></script>
-  <div id="container-a5a82325576f4300f3eeba835c04e59a"></div>
+    {% if user.is_authenticated %}
+      <main>
+        <span>Seu saldo: 0,3</span>
+        <i class="fas fa-coins fa-sm"></i>
+        <hr>
+        
+        <div>Clique no anúncio abaixo e receba 0,1 moedas de recompensa.</div>
+        <hr>
+        <!--<center>
+          <div id="ad1">
+            <script async="async" data-cfasync="false" src="//pl16405437.highperformancecpm.com/a5a82325576f4300f3eeba835c04e59a/invoke.js"></script>
+    <div id="container-a5a82325576f4300f3eeba835c04e59a"></div>
+          </div>
+        </center>-->
+        
+        <hr>
+        
+        <div class="explicacao">
+          <center><span class="title">Como Funciona?</span></center>
+          <p>Você ganha dinheiro real clicando em anúncios. É tão fácil quanto dar um click na tela do seu celular!</p>
+          <p>Você ganha "moedas". Uma (1) moeda equivale a 5 centavos, é preciso de pelo menos 3000 moedas (R$ 25,00) para sacar.</p>
+          <hr>
+          <center><span class="title">Como Ganhar Ainda Mais!?</span></center>
+          <p>É possível ganhar ainda mais divulgando o seu link de referência para seus amigos: você vai ganhar 30% de tudo que seus amigos ganharem. Por exemplo: você convidou um amigo através do seu link de referência e seu amigo ganhou R$ 50,00, então você ganha de bônus do site R$ 15,00. Ou seja, quanto mais amigos você convidar, mais você ganha!</p>
         </div>
-      </center>
-      
-      <hr>
-      
-      <div class="explicacao">
-        <center><span class="title">Como Funciona?</span></center>
-        <p>Você pode voltar nessa página a cada 1 hora e receber prêmios em dinheiro real por clicar nos anúncios. É tão fácil quanto dar um click na tela do seu celular!</p>
-        <p>Aqui você ganha "moedas", uma (1) moeda equivale a 5 centavos, você precisa de no mínimo 3000 moedas (R$ 25,00) para sacar.</p>
-        <center><span class="title">Como Ganhar Ainda Mais!?</span></center>
-        <p>Você pode ganhar ainda mais divulgando o seu link de referência para os seus amigos: você vai ganhar 30% de tudo que seus amigos ganharem. Por exemplo: você convidou um amigo através do seu link de referência e seu amigo ganhou R$ 50,00, você ganha de bônus do site R$ 15,00. Ou seja, quanto mais amigos você convidar, mais você ganha!</p>
-      </div>
-    </main>
+      </main>
+    {% else %}
+      <main>
+        <div class="explicacao">
+          <center><span class="title">Como Funciona?</span></center>
+          <p>Você ganha dinheiro real clicando em anúncios. É tão fácil quanto dar um click na tela do seu celular!</p>
+          <p>Você ganha "moedas". Uma (1) moeda equivale a 5 centavos, é preciso de pelo menos 3000 moedas (R$ 25,00) para sacar.</p>
+          <hr>
+          <center><span class="title">Como Ganhar Ainda Mais!?</span></center>
+          <p>É possível ganhar ainda mais divulgando o seu link de referência para seus amigos: você vai ganhar 30% de tudo que seus amigos ganharem. Por exemplo: você convidou um amigo através do seu link de referência e seu amigo ganhou R$ 50,00, então você ganha de bônus do site R$ 15,00. Ou seja, quanto mais amigos você convidar, mais você ganha!</p>
+        </div>
+      </main>
+    {% endif %}
     
     <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
   </body>
