--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -60,18 +60,18 @@
           <center><span class="title">Como Funciona?</span></center>
           <p>Você ganha dinheiro real clicando em anúncios. É tão fácil quanto dar um click na tela do seu celular!</p>
           <p>Você ganha "moedas". Uma (1) moeda equivale a 5 centavos, é preciso de pelo menos 3000 moedas (R$ 25,00) para sacar.</p>
-          <hr>
           <center><span class="title">Como Ganhar Ainda Mais!?</span></center>
           <p>É possível ganhar ainda mais divulgando o seu link de referência para seus amigos: você vai ganhar 30% de tudo que seus amigos ganharem. Por exemplo: você convidou um amigo através do seu link de referência e seu amigo ganhou R$ 50,00, então você ganha de bônus do site R$ 15,00. Ou seja, quanto mais amigos você convidar, mais você ganha!</p>
         </div>
       </main>
     {% else %}
       <main>
+        <p><a href="/signup?redirect=/rewards">Crie uma conta</a> ou <a href="/signin?redirect=/rewards">faça login</a> para começar a ganhar dinheiro! 🤑</p>
+        
         <div class="explicacao">
           <center><span class="title">Como Funciona?</span></center>
           <p>Você ganha dinheiro real clicando em anúncios. É tão fácil quanto dar um click na tela do seu celular!</p>
           <p>Você ganha "moedas". Uma (1) moeda equivale a 5 centavos, é preciso de pelo menos 3000 moedas (R$ 25,00) para sacar.</p>
-          <hr>
           <center><span class="title">Como Ganhar Ainda Mais!?</span></center>
           <p>É possível ganhar ainda mais divulgando o seu link de referência para seus amigos: você vai ganhar 30% de tudo que seus amigos ganharem. Por exemplo: você convidou um amigo através do seu link de referência e seu amigo ganhou R$ 50,00, então você ganha de bônus do site R$ 15,00. Ou seja, quanto mais amigos você convidar, mais você ganha!</p>
         </div>
