--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -42,6 +42,11 @@
       <main>
         <span>Seu saldo: <span id="balance">{{ user_balance }}</span></span>
         <i class="fas fa-coins fa-sm"></i>
+        <br>
+        <span>Ganhos por referência: <span id="balance">{{ user_balance_ref }}</span></span>
+        <i class="fas fa-coins fa-sm"></i>
+        <br>
+        <span>Seu link de referência: http://localhost:8000/?r={{ user.id }}</span>
         <hr>
         
         
@@ -60,6 +65,10 @@
   }
   if (min < 0) {
     min *= -1;
+  }
+  
+  if(min == 60) {
+    min = 59;
   }
   
   var handler = function() {
@@ -92,7 +101,7 @@
         
         
         <center>
-          <div>Clique no anúncio abaixo e receba 0,1 moedas de recompensa.</div>
+          <div>Clique no anúncio abaixo e receba {{ valor_da_recompensa }} moedas de recompensa.</div>
           <hr>
         </center>
         
@@ -113,6 +122,10 @@
           <p>Você ganha "moedas". Uma (1) moeda equivale a 5 centavos, é preciso de pelo menos 3000 moedas (R$ 25,00) para sacar.</p>
           <center><span class="title">Como Ganhar Ainda Mais!?</span></center>
           <p>É possível ganhar ainda mais divulgando o seu link de referência para seus amigos: você vai ganhar 30% de tudo que seus amigos ganharem. Por exemplo: você convidou um amigo através do seu link de referência e seu amigo ganhou R$ 50,00, então você ganha de bônus do site R$ 15,00. Ou seja, quanto mais amigos você convidar, mais você ganha!</p>
+          <p>Aqui está seu link de referência: http://localhost:8000/?r={{ user.id }}</p>
+          <center><span class="title">Como Sacar</span></center>
+          <p>É possível retirar o dinheiro via PicPay, Pix ou PayPal. Deseja outra forma de saque? <a href="mailto:minha.ccontta@gmail.com">Contate-me</a>.</p>
+          <p>O botão de saque será liberado quando o valor mínimo de R$ 25,00 (3000 moedas) for atingido.</p>
         </div>
       </main>
     {% else %}
@@ -125,6 +138,9 @@
           <p>Você ganha "moedas". Uma (1) moeda equivale a 5 centavos, é preciso de pelo menos 3000 moedas (R$ 25,00) para sacar.</p>
           <center><span class="title">Como Ganhar Ainda Mais!?</span></center>
           <p>É possível ganhar ainda mais divulgando o seu link de referência para seus amigos: você vai ganhar 30% de tudo que seus amigos ganharem. Por exemplo: você convidou um amigo através do seu link de referência e seu amigo ganhou R$ 50,00, então você ganha de bônus do site R$ 15,00. Ou seja, quanto mais amigos você convidar, mais você ganha!</p>
+          <center><span class="title">Como Sacar</span></center>
+          <p>É possível retirar o dinheiro via PicPay, Pix ou PayPal. Deseja outra forma de saque? <a href="mailto:minha.ccontta@gmail.com">Contate-me</a>.</p>
+          <p>O botão de saque será liberado quando o valor mínimo de R$ 25,00 (3000 moedas) for atingido.</p>
         </div>
       </main>
     {% endif %}
@@ -139,7 +155,7 @@
         $.ajax({
           url: "/increase_balance",
           complete: function () {
-            alert("Parabéns! Você ganhou " + valor_da_recompensa + " moedas de recompensa!");
+            alert("Parabéns! Você ganhou " + valor_da_recompensa + " moedas!");
             balance.innerText = String(Number(balance.innerText.replace(",", ".")) + Number(valor_da_recompensa.replace(",", "."))).replace(".", ",");
           }
         });
