--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -46,7 +46,7 @@
         <span>Ganhos por referência: <span id="balance">{{ user_balance_ref }}</span></span>
         <i class="fas fa-coins fa-sm"></i>
         <br>
-        <span>Seu link de referência: http://localhost:8000/?r={{ user.id }}</span>
+        <span>Seu link de referência: https://br.asker.fun/?r={{ user.id }}</span>
         <hr>
         
         
@@ -122,7 +122,7 @@
           <p>Você ganha "moedas". Uma (1) moeda equivale a 5 centavos, é preciso de pelo menos 3000 moedas (R$ 25,00) para sacar.</p>
           <center><span class="title">Como Ganhar Ainda Mais!?</span></center>
           <p>É possível ganhar ainda mais divulgando o seu link de referência para seus amigos: você vai ganhar 30% de tudo que seus amigos ganharem. Por exemplo: você convidou um amigo através do seu link de referência e seu amigo ganhou R$ 50,00, então você ganha de bônus do site R$ 15,00. Ou seja, quanto mais amigos você convidar, mais você ganha!</p>
-          <p>Aqui está seu link de referência: http://localhost:8000/?r={{ user.id }}</p>
+          <p>Aqui está seu link de referência: https://br.asker.fun/?r={{ user.id }}</p>
           <center><span class="title">Como Sacar</span></center>
           <p>É possível retirar o dinheiro via PicPay, Pix ou PayPal. Deseja outra forma de saque? <a href="mailto:minha.ccontta@gmail.com">Contate-me</a>.</p>
           <p>O botão de saque será liberado quando o valor mínimo de R$ 25,00 (3000 moedas) for atingido.</p>
