--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -130,7 +130,11 @@
       </main>
     {% else %}
       <main>
-        <p><a href="/signup?redirect=/rewards&r={{ ref }}">Crie uma conta</a> ou <a href="/signin?redirect=/rewards">faça login</a> para começar a ganhar dinheiro! 🤑</p>
+        {% if ref %}
+          <p><a href="/signup?redirect=/rewards&r={{ ref }}">Crie uma conta</a> ou <a href="/signin?redirect=/rewards">faça login</a> para começar a ganhar dinheiro! 🤑</p>
+        {% else %}
+          <p><a href="/signup?redirect=/rewards">Crie uma conta</a> ou <a href="/signin?redirect=/rewards">faça login</a> para começar a ganhar dinheiro! 🤑</p>
+        {% endif %}
         
         <div class="explicacao">
           <center><span class="title">Como Funciona?</span></center>
