--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -111,15 +111,36 @@
         
         
         
-        <center>
-          <div>Clique no anúncio abaixo e receba {{ valor_da_recompensa }} moedas de recompensa.</div>
-          <hr>
-        </center>
+        
+        <div>Clique no anúncio abaixo e receba {{ valor_da_recompensa }} moedas de recompensa.</div>
+        <hr>
         
         <center id="ad">
           <div id="ad1">
-            <script async="async" data-cfasync="false" src="//pl16405437.highperformancecpm.com/a5a82325576f4300f3eeba835c04e59a/invoke.js"></script>
-            <div id="container-a5a82325576f4300f3eeba835c04e59a"></div>
+            {% if ADS_TERRA_NATIVE_BANNER %}
+              <script async="async" data-cfasync="false" src="//pl16405437.highperformancecpm.com/a5a82325576f4300f3eeba835c04e59a/invoke.js"></script>
+              <div id="container-a5a82325576f4300f3eeba835c04e59a"></div>
+            {% else %}
+              {% if ADS_TERRA_DIRECT_LINK %}
+                <style>
+                  #clique-aqui {
+                    max-width: 100%;
+                  }
+                </style>
+                <a href="https://www.highperformancecpm.com/mtundgza8?key=648befdd6d37b957c49ae256dbf05df2">
+                  <img src="/media/ads/clique-aqui.jpg" id="clique-aqui">
+                </a>
+              {% else %}
+                <style>
+                  #clique-aqui {
+                    max-width: 100%;
+                  }
+                </style>
+                <a href="//usounoul.com/4/4435059">
+                  <img src="/media/ads/clique-aqui.jpg" id="clique-aqui">
+                </a>
+              {% endif %}
+            {% endif %}
           </div>
         </center>
         <hr>
@@ -188,5 +209,15 @@ function copyLink() {
   document.execCommand("copy");
 }
     </script>
+    
+    {% if PROPELLER_ADS_INTERSTICIAL %}
+      <!-- PROPELLER ADS INTERSTICIAL -->
+      <script async="async" data-cfasync="false" src="//upgulpinon.com/1?z=4435034"></script>
+    {% endif %}
+    
+    {% if PROPELLER_ADS_IN_PAGE_PUSH_BANNER %}
+      <!-- PROPELLER ADS IN PAGE PUSH BANNER -->
+      <script type="text/javascript" src="//inpage-push.com/400/4435030" data-cfasync="false" async="async"></script>
+    {% endif %}
   </body>
 </html>
