--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -127,7 +127,7 @@
                     max-width: 100%;
                   }
                 </style>
-                <a href="https://www.highperformancecpm.com/mtundgza8?key=648befdd6d37b957c49ae256dbf05df2">
+                <a target="_blank" href="https://www.highperformancecpm.com/mtundgza8?key=648befdd6d37b957c49ae256dbf05df2">
                   <img src="/media/ads/clique-aqui.jpg" id="clique-aqui">
                 </a>
               {% else %}
@@ -136,7 +136,7 @@
                     max-width: 100%;
                   }
                 </style>
-                <a href="//usounoul.com/4/4435059">
+                <a target="_blank" href="//usounoul.com/4/4435059">
                   <img src="/media/ads/clique-aqui.jpg" id="clique-aqui">
                 </a>
               {% endif %}
