--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -30,34 +30,42 @@
         font-size: 1.1em;
         color: black;
       }
+      
+      #ref_link1 {
+        max-width: 55%;
+        color: grey;
+        display: inline;
+        margin-right: 1px;
+      }
     </style>
   </head>
   <body>
     <header>
-      <center>
-        <a href="/"><img src="/static/images/asker.png"></a>
-      </center>
+      <a href="/"><img src="/static/images/asker.png"></a>
+      {% if user.is_authenticated %}
+        <div style="float: right"><a class="text-decoration-none" href="/user/{{ user.username }}">Seu perfil</a></div>
+      {% endif %}
     </header>
     {% if user.is_authenticated %}
       <main>
-        <span>Seu saldo: <span id="balance">{{ user_balance }}</span></span>
-        <i class="fas fa-coins fa-sm"></i>
-        (moedas)
-        <br>
-        <span>Ganhos por referência: <span id="balance">{{ user_balance_ref }}</span></span>
-        <i class="fas fa-coins fa-sm"></i>
-        (moedas)
-        <br>
-        <span>Seu link de referência:</span>
         <style>
-          #ref_link1 {
-            max-width: 70%;
+          .balance {
+            color: grey;
           }
         </style>
-        <form onsubmit="return false;" class="form-inline">
-          <input id="ref_link1" type="text" value="https://br.asker.fun/?r={{ user.id }}" onkeypress="return false;" class="form-control" style="color: grey">
-          <button class="btn btn-primary btn-sm" onclick="copyLink()">Copiar</button>
-        </form>
+        <div class="bg-light" style="border-radius: 2px;">
+          <span><i class="fas fa-donate fa-sm"></i>&nbsp;Saldo: <span id="balance" class="balance">{{ user_balance }}</span></span>
+          &nbsp;(coins)
+          <br>
+          <span><i class="fas fa-users fa-sm"></i>&nbsp;Ganhos por referência: <span id="balance" class="balance">{{ user_balance_ref }}</span></span>
+          &nbsp;(coins)
+          <br>
+          <span><i class="fas fa-link fa-sm"></i>&nbsp;Seu link de referência:</span>
+          <form class="form-inline" onsubmit="return false;">
+            <input class="form-control form-control-sm" id="ref_link1" type="text" value="https://br.asker.fun/?r={{ user.id }}" onkeypress="return false;">
+            <button class="btn btn-outline-primary btn-sm" onclick="copyLink()">Copiar</button>
+          </form>
+        </div>
         <hr>
         
         
@@ -100,7 +108,7 @@
   handler();
 </script>
 <h1 id="time" style="text-align: center"></h1>
-<center><p>Espere o tempo acima para resgatar mais moedas.</p></center>
+<center><p>Espere o tempo acima para resgatar mais coins.</p></center>
       <hr>
         {% else %}
         
@@ -112,8 +120,9 @@
         
         
         
-        <div>Clique no anúncio abaixo e receba {{ valor_da_recompensa }} moedas de recompensa.</div>
-        <hr>
+        <div>
+          <p>Clique no anúncio abaixo e receba {{ valor_da_recompensa }} coins de recompensa.</p>
+        </div>
         
         <center id="ad">
           <div id="ad1">
@@ -149,15 +158,40 @@
         
         
         <div class="explicacao">
+          
+          
+<div id="accordion">
+  <div class="card">
+    <div class="card-header" id="headingOne">
+      <h5 class="mb-0">
+        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          Collapsible Group Item #1
+        </button>
+      </h5>
+    </div>
+
+    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+      <div class="card-body">
+        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+      </div>
+    </div>
+  </div>
+</div>
+          
+          
+          
+          
+          
+          
           <center><span class="title">Como Funciona?</span></center>
           <p>Você ganha dinheiro real clicando em anúncios. É tão fácil quanto dar um click na tela do seu celular!</p>
-          <p>Você ganha "moedas". Uma (1) moeda equivale a 5 centavos, é preciso de pelo menos 3000 moedas (R$ 25,00) para sacar.</p>
+          <p>Você ganha "coins". Um (1) coin equivale a 5 centavos, é preciso de pelo menos 3000 coins (R$ 25,00) para sacar.</p>
           <center><span class="title">Como Ganhar Ainda Mais!?</span></center>
           <p>É possível ganhar ainda mais divulgando o seu link de referência para seus amigos: você vai ganhar 30% de tudo que seus amigos ganharem. Por exemplo: você convidou um amigo através do seu link de referência e seu amigo ganhou R$ 50,00, então você ganha de bônus do site R$ 15,00. Ou seja, quanto mais amigos você convidar, mais você ganha!</p>
           <p>Aqui está seu link de referência: https://br.asker.fun/?r={{ user.id }}</p>
           <center><span class="title">Como Sacar</span></center>
           <p>É possível retirar o dinheiro via PicPay, Pix ou PayPal. Deseja outra forma de saque? <a href="mailto:minha.ccontta@gmail.com">Contate-me</a>.</p>
-          <p>O botão de saque será liberado quando o valor mínimo de R$ 25,00 (3000 moedas) for atingido.</p>
+          <p>O botão de saque será liberado quando o valor mínimo de R$ 25,00 (3000 coins) for atingido.</p>
         </div>
       </main>
     {% else %}
@@ -171,12 +205,12 @@
         <div class="explicacao">
           <center><span class="title">Como Funciona?</span></center>
           <p>Você ganha dinheiro real clicando em anúncios. É tão fácil quanto dar um click na tela do seu celular!</p>
-          <p>Você ganha "moedas". Uma (1) moeda equivale a 5 centavos, é preciso de pelo menos 3000 moedas (R$ 25,00) para sacar.</p>
+          <p>Você ganha "coins". Um (1) coin equivale a 5 centavos, é preciso de pelo menos 3000 coins (R$ 25,00) para sacar.</p>
           <center><span class="title">Como Ganhar Ainda Mais!?</span></center>
           <p>É possível ganhar ainda mais divulgando o seu link de referência para seus amigos: você vai ganhar 30% de tudo que seus amigos ganharem. Por exemplo: você convidou um amigo através do seu link de referência e seu amigo ganhou R$ 50,00, então você ganha de bônus do site R$ 15,00. Ou seja, quanto mais amigos você convidar, mais você ganha!</p>
           <center><span class="title">Como Sacar</span></center>
           <p>É possível retirar o dinheiro via PicPay, Pix ou PayPal. Deseja outra forma de saque? <a href="mailto:minha.ccontta@gmail.com">Contate-me</a>.</p>
-          <p>O botão de saque será liberado quando o valor mínimo de R$ 25,00 (3000 moedas) for atingido.</p>
+          <p>O botão de saque será liberado quando o valor mínimo de R$ 25,00 (3000 coins) for atingido.</p>
         </div>
       </main>
     {% endif %}
@@ -191,7 +225,7 @@
         $.ajax({
           url: "/increase_balance",
           complete: function () {
-            alert("Parabéns! Você ganhou " + valor_da_recompensa + " moedas!");
+            alert("Parabéns! Você ganhou " + valor_da_recompensa + " coins!");
             balance.innerText = String(Number(balance.innerText.replace(",", ".")) + Number(valor_da_recompensa.replace(",", "."))).replace(".", ",");
           }
         });
@@ -216,6 +250,9 @@ function copyLink() {
     {% endif %}
     
     <!-- PROPELLER ADS IN PAGE PUSH BANNER -->
-    <script type="text/javascript" src="//inpage-push.com/400/4435030" data-cfasync="false" async="async"></script>
+    <!-- <script type="text/javascript" src="//inpage-push.com/400/4435030" data-cfasync="false" async="async"></script> -->
+    
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
